<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_bar"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/activity_horizontal_half_margin"
    android:gravity="center"
    style="@style/MaterialCardWithColoredBorder"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/card_board"
    tools:showIn="@layout/content_main">

    <LinearLayout style="@style/buttonBarStyle">

        <Button
            android:id="@+id/button_discard"
            style="@style/borderlessButtonStyle"
            android:text="@string/discard" />

        <Button
            android:id="@+id/button_undo"
            style="@style/borderlessButtonStyle"
            android:text="@string/undo" />

        <Button
            android:id="@+id/button_deal"
            style="@style/borderlessButtonStyle"
            android:text="@string/deal" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>