<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_bar"
        style="@style/Widget.Material3.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="bottom"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:fabAlignmentMode="center"
        app:fabAnimationMode="slide"
        app:fabCradleVerticalOffset="0dp"
        tools:ignore="BottomAppBar">

        <LinearLayout style="@style/statusBarStyle">

            <TextView
                android:id="@+id/tv_cards_remaining_to_discard"
                style="@style/textViewStyle.status"
                android:paddingEnd="@dimen/activity_horizontal_margin_double"
                android:text="@string/cards_to_discard"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_cards_in_deck"
                style="@style/textViewStyle.status"
                android:paddingStart="@dimen/activity_horizontal_margin_double"
                android:text="@string/in_deck"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/fab"
        app:layout_anchor="@id/bottom_bar"
        app:layout_anchorGravity="center"
        app:srcCompat="@android:drawable/ic_dialog_info" />
</merge>